--- a/BepInEx6.PluginTemplate.Unity.Il2Cpp.csproj
+++ b/BepInEx6.PluginTemplate.Unity.Il2Cpp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>m75partialprints</AssemblyName>
     <Description>My first plugin</Description>
-    <Version>0.3.0</Version>
+    <Version>0.4.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -27,6 +27,9 @@
     </Reference>
     <Reference Include="Il2Cppmscorlib">
       <HintPath>..\MyFirstPlugin\lib\Il2Cppmscorlib.dll</HintPath>
+    </Reference>
+    <Reference Include="SOD.Common">
+      <HintPath>..\LIB\SOD.Common.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>..\LIB\Unity.TextMeshPro.dll</HintPath>
